<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background10"
    android:padding="1dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/btnRegister"
        android:fontFamily="@font/light"
        android:paddingBottom="5dp"
        android:text="@string/no_reg"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        tools:ignore="RelativeOverlap" />


    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/light"
        android:paddingStart="5dp"
        android:paddingBottom="5dp"
        android:text="@string/reg"
        android:textColor="@color/colorRed"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />


    <include
        android:id="@+id/btnSingIn"
        layout="@layout/prrogress_btn_layoaut"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp" />

    <Button
        android:id="@+id/zyaik"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="3dp"
        android:background="@drawable/btn_log5"
        android:fontFamily="serif"
        android:padding="3dp"
        android:shadowColor="@color/colorWhite"
        android:text="@string/vib_yazik"
        android:textColor="@color/colorWhite" />


</RelativeLayout>